--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
         <app-apparatus></app-apparatus>
         <app-apparatus></app-apparatus>
       </ul>
+      <button class="btn btn-success" type="button" name="switchAllLightButton" [disabled] = "!isAuthentified">Tout allumer</button>
     </div>
   </div>
 </div>
