--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
     <div class="col-xs-12">
       <h2>Here are my apparatus: </h2>
       <ul class="list-group">
-        <app-apparatus apparatusName="machine à laver" apparatusStatus="éteint"></app-apparatus>
-        <app-apparatus apparatusName="Frigo" apparatusStatus="allumé"></app-apparatus>
-        <app-apparatus apparatusName="Ordinateur" apparatusStatus="éteint"></app-apparatus>
-        <app-apparatus apparatusName="Télévision"apparatusStatus="allumé"></app-apparatus>
+        <app-apparatus *ngFor="let device of devices"
+                        [apparatusName]="device.name"
+                        [apparatusStatus]="device.status">
+        </app-apparatus>
       </ul>
       <button class="btn btn-success"
               type="button"
