--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,9 @@
               type="button"
               name="switchAllLightButton"
               [disabled] = "!isAuthentified"
-              (click) = "onClickOnSwitchAllLightButton()">Tout allumer</button>
+              (click) = "onClickOnSwitchAllLightButton()">
+              Tout allumer
+      </button>
     </div>
   </div>
 </div>
