--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -1,8 +1,10 @@
-<li class="list-group-item">
+<li [ngClass]="{'list-group-item':true,
+                'list-group-item-success': deviceStatus === 'allumé',
+                'list-group-item-danger': deviceStatus === 'éteint'}">
   <div style="width:20px;height:20px;background-color:red;"
     *ngIf="deviceStatus === 'éteint'">
   </div>
-  <h4> Device: {{ deviceName }} - {{ getStatus() }}
+  <h4 [ngStyle]="{color: getColor()}"> Device: {{ deviceName }} - {{ getStatus() }}
   </h4>
   <input type="text" name="deviceNameInput" class="form-control" [(ngModel)] = "deviceName">
 </li>
