Discovered how routing works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Adevice components -->
 <div class="container">
   <div class="row">
-    <app-devices-view></app-devices-view>
+    <router-outlet></router-outlet>
   </div>
 </div>
