--- a/src/app/device/device.component.html
+++ b/src/app/device/device.component.html
@@ -13,6 +13,6 @@
           class="btn btn-danger"
           (click)="onSwitchOffDeviceButton()"
           [disabled]="deviceStatus === 'éteint'">
-          allumer
+          éteindre
   </button>
 </li>
