--- a/src/app/devices-view/devices-view.component.html
+++ b/src/app/devices-view/devices-view.component.html
@@ -5,7 +5,8 @@
     <app-device *ngFor="let device of devices; let i = index"
                     [deviceIndex]="i"
                     [deviceName]="device.name"
-                    [deviceStatus]="device.status">
+                    [deviceStatus]="device.status"
+                    [id]="device.id">
     </app-device>
   </ul>
   <button class="btn btn-success"
