Discovered rxjs and observables.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
         <a routerLink="devices">devices</a>
       </li>
     </ul>
+    <div class="navbar-right">
+      <p>Vous êtes connectés depuis {{ secondes }} secondes</p>
+    </div>
   </div>
 </nav>
 
