--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
       <li routerLinkActive="active">
         <a routerLink="devices">devices</a>
       </li>
+      <li routerLinkActive="active">
+        <a routerLink="deviceEdition">Nouvel appareil</a>
+      </li>
     </ul>
     <div class="navbar-right">
       <p>Vous êtes connectés depuis {{ secondes }} secondes</p>
