--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,9 @@
       <li routerLinkActive="active">
         <a routerLink="deviceEdition">Nouvel appareil</a>
       </li>
+      <li routerLinkActive="active">
+          <a routerLink="users">Utilisateurs</a>
+        </li>
     </ul>
     <div class="navbar-right">
       <p>Vous êtes connectés depuis {{ secondes }} secondes</p>
