Discovered interaction with server using httpClient

--- a/src/app/devices-view/devices-view.component.html
+++ b/src/app/devices-view/devices-view.component.html
@@ -21,5 +21,13 @@
             (click) = "onSwitchOffAllButton()">
             Tout éteindre
     </button>
+    <button class="btn btn-success" 
+            (click)="onSave()">
+            Enregistrer
+    </button>
+    <button class="btn btn-primary" 
+            (click)="onFetch()">
+            Charger
+    </button>
   </div>
 </div>
